# saa

./: .env.example  .gitignore  LICENSE  LLM_EXECUTION_GUIDE.md  README.md  SYSTEM_AGNOSTIC_PROCESS_IMPROVEMENTS.md  SYSTEM_ISOLATION.md  TEMPLATE_SYSTEM_SUMMARY.md  WORKFLOW_README.md  WORKFLOW_VISUAL.md  __init__.py  analyzer.py  architecture_workflow.json  base_models.py  bootstrap.py  docker-compose.yml  generate_from_templates.py  process_improvements.md  requirements.txt  retroactive_service_index.py  run_llm_architecture_process.py  step_by_step_architecture_process.md  system_of_systems_graph.py  validate_templates.py
campaign_service/: Dockerfile  pyproject.toml
campaign_service/alembic/: env.py
campaign_service/alembic/versions/: 20231028_000000_initial_schema.py
campaign_service/scripts/: start.sh
definitions/: architectural_definitions.json
docs/: api_gateway_implementation_guide.md  campaign_service_implementation_guide.md  image_service_implementation_guide.md  implementation_guide.md  llm_service_implementation_guide.md  message_hub_implementation_guide.md
examples/: banking_example.py  bluesky_example.md  ecommerce_example.py
image_service/: Dockerfile  alembic.ini  pyproject.toml
llm_service/: Dockerfile  pyproject.toml
templates/: README.md  context_checkpoint_template.md  index_schema.json  index_template.json  interface_contract_template.json  internal_module_template.json  process_log_template.md  service_architecture_schema.json  service_architecture_template.json  working_memory_template.json
tools/: analyze_features.py  cleanup_system.py  generate_interface_contracts.py  (+4 more)
(+115 files in other folders)
