[tool.poetry]
name = "dnd-campaign-service"
version = "0.1.0"
description = "Campaign management service for D&D Character Creator"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
asyncpg = "^0.28.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
alembic = "^1.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiohttp = "^3.8.6"
prometheus-client = "^0.17.1"
redis = "^5.0.1"
pyyaml = "^6.0.1"
python-multipart = "^0.0.6"
python-json-logger = "^2.0.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest-mock = "^3.11.1"
aioresponses = "^0.7.4"
asgi-lifespan = "^2.1.0"
types-PyYAML = "^6.0.12.12"
types-redis = "^4.6.0.5"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"